fixed z-index

--- a/src/components/home/AboutUsSection.module.scss
+++ b/src/components/home/AboutUsSection.module.scss
@@ -2,7 +2,7 @@
   padding: 5rem 2rem;
   background-color: #fff;
   position: relative;
-  z-index: 999999;
+  z-index: 1;
   min-height: 100vh;
   display: flex;
   align-items: center;
